# flask-api-sqlalchemy

./: 404.html  Dockerfile.dev  README.md  docker-compose.dev.yml  index.html  mkdocs.yml  poetry.toml  pyproject.toml  setup.cfg  setup.py  sitemap.xml
.devcontainer/: devcontainer.json
docs/: index.md
scripts/: docs_build.sh  docs_deploy_github_pages_w_mkdocs.sh  lint_apply.sh  poetry_make_requirements_txt.sh  poetry_publish_package_test.sh  typer_cli_generate_docs.sh
search/: search_index.json
src/flask_api_sqlalchemy/: __init__.py  api.py  cli.py
tests/: conftest.py  run_actual_app.py  test_api_endpoints.py  test_extension.py
