# setup.cfg
# This configuration file works with setup.py to define package metadata
[metadata]
name = flask-api-sqlalchemy
version = 0.1.0
description = Flask extension for automatically generating RESTful APIs from SQLAlchemy models
long_description = file: README.md
long_description_content_type = text/markdown
author = Sean McCarthy
author_email = sean.mccarthy@hotmail.com
license = MIT
license_file = LICENSE
classifiers =
Development Status :: 3 - Alpha
Intended Audience :: Developers
License :: OSI Approved :: MIT License
Programming Language :: Python :: 3
Programming Language :: Python :: 3.8
Programming Language :: Python :: 3.9
Programming Language :: Python :: 3.10
Programming Language :: Python :: 3.11
keywords = flask, restx, sqlalchemy, api, rest

[options]
package_dir =
= src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
flask-api-sqlalchemy = flask_sqlalchemy_api.cli:main
